--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     rel="stylesheet">
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-  <link rel="stylesheet" href="../src/style.css">
+  <link rel="stylesheet" href="../src/scss/style.scss">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
@@ -28,7 +28,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>React App</title>
+  <title>Front-end</title>
 </head>
 
 <body>
