--- a/front-end/index.html
+++ b/front-end/index.html
@@ -10,7 +10,7 @@
     <main>
         <nav class="navigation">
             <div class="logo">
-                <img src="img/Gemeente Amsterdam.svg" alt="logo gemeente Amsterdam">
+                <img src="./img/Gemeente Amsterdam.svg" alt="logo gemeente Amsterdam">
             </div> 
             <ul>
                 
