--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 
 <head>
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -12,7 +12,13 @@
   <link rel="stylesheet" href="%PUBLIC_URL%/src/css/style.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
+  <meta name="description" content="Front-end voor gemeente Amsterdam website" />
+  <meta name="language" content="nl" />
+  <meta name="og:author" content="Cedric Király" />
+  <meta property="og:title" content="Front-end website" />
+  <meta property="og:image" content="%PUBLIC_URL%/src/img/48-5000x3333.webp" />
+  
+
   <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon-16x16.png">
